<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_circular"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:elevation="4dp"
            android:indeterminate="true"
            app:indicatorColor="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/weather_forecast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="Mumbai" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="Saturday, July 03" />

            <TextView
                android:id="@+id/condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Light Rain" />

            <ImageView
                android:id="@+id/weather_resource"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:padding="8dp"
                android:src="@drawable/art_light_rain" />

            <TextView
                android:id="@+id/temp_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="48sp"
                tools:text="36C" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/thermometer"
                        android:layout_width="50dp"
                        android:layout_height="70dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/thermometer" />

                    <TextView
                        android:id="@+id/feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/thermometer"
                        android:text="@string/feels_like"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feels_like"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@+id/thermometer"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="22C" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feels_like"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@+id/temperature"
                        android:text="@string/today"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/humidity_img"
                        android:layout_width="50dp"
                        android:layout_height="70dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/humidity_img"
                        android:text="@string/humidity"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/humidity"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@+id/humidity_img"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="22C" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/wind_img"
                        android:layout_width="50dp"
                        android:layout_height="70dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/wind" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/wind_img"
                        android:text="@string/wind"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/wind_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wind"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@+id/wind_img"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="22C" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/sun"
                        android:layout_width="50dp"
                        android:layout_height="70dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/sun" />

                    <TextView
                        android:id="@+id/sun_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/sun"
                        android:text="@string/uv_index"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/uv_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/sun_txt"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@+id/sun"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="22C" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
